public/stylesheets/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

body {
  background-color: #1E4D2B;
  color: #C8C372;
} 

html {
  width: 100%;
}

.brand-logo {
  height: 100%;
}

nav ul a,
nav .brand-logo,
.white,
.page-footer .footer-copyright {
  color: #1E4D2B;
  background-color: #C8C372;

}

#title-background-pic {
  background-image: url("../images/background1.jpg");
  filter: blur(5px);
  -webkit-filter: blur(5px);
}

#body-pic1 {
    background-image: url("../images/background2.jpg");
    filter: blur(5px);
    -webkit-filter: blur(5px);
}

#body-pic2 {
  background-image: url("../images/background3.jpg");
  filter: blur(5px);
  -webkit-filter: blur(5px);
}

.main-title,
.main-subtitle,
.section2,
.section3-title {
  color: #C8C372;
  font-weight: bold;
  text-align: center;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.usahockey-subtitle {
  color: #1E4D2B;
  font-weight: bolder;
  text-shadow: -1px 0 #C8C372, 0 1px #C8C372, 1px 0 #C8C372, 0 -1px #C8C372;

}

h5 {
  font-size: 250%;
}

.body-text {
  font-size: 150%;
}

.section3-title {
  margin-top: 0;
  font-size: 300%;
  margin-bottom: 0%; 
}

.section3-text {
  font-size: 155%;
  color: #C8C372;
  font-weight: bolder;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;

}

#action-call,
#index-banner {
  background-color: rgba(0, 0, 0, 0.4);
}

.material-icons {
  color: #C8C372;
}

p {
  line-height: 2rem;
}


.reference-text {
  padding-left: 5ch;
  text-indent: -5ch;
}

.parallax-container {
  min-height: 100px;
  line-height: 0;
  /* height: 150px; */
  color: rgba(255,255,255,.9);
}
  .parallax-container .section {
    width: 100%;
  }

.footer-name {
  color: #1E4D2B;
  font-weight: bolder;
}

.template-link {
  color: darkblue;
}

@media only screen and (max-width : 1367px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 5%;
    font-size: 65%; 
  }

  #action-call-text {
    font-size: 210%;
    line-height: 1.2;
  }

}


@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 5%;
    font-size: 65%; 
  }

  #action-call-text {
    font-size: 200%;
    line-height: 1.2;
  }

}

@media only screen and (max-width : 600px) {
/* 
  body {
    width: 150%;
  } */

  .section3-title {
    margin-top: 0;
    font-size: 350%;
    margin-bottom: 0%; 
  }

  #index-banner .section {
    top: 0;
  }

  #action-call-text {
    font-size: 180%;
    line-height: 1.1;
  }
}

@media only screen and (max-width : 320px) {
  
  body {
    margin: auto;
  }
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
}

footer.page-footer {
  margin: 0;
}

